Fix details dark mode bug

--- a/styles/details.css
+++ b/styles/details.css
@@ -71,7 +71,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border-color: var(--lines-color);
+  border-color: #dddddd;
   border-style: solid;
   flex-grow: 1;
 }
@@ -85,6 +85,10 @@
   justify-content: center;
   align-items: center;
   gap: 0.8rem;
+}
+
+.details-content-container *{ 
+  color: black;
 }
 
 .add-fav-button:hover {
